Experimental setup and some theory for the report.

--- a/report/main.bib
+++ b/report/main.bib
@@ -14,3 +14,30 @@
     year={1989}
 }
 
+@article{taylor79,
+    author={Russel H. Taylor},
+    title={Planning and Execution of Straight Line Manipulator Trajectories},
+    journal={IBM Journal of Research and Development},
+    number={4},
+    pages={424--436},
+    volume={23},
+    year={1979},
+}
+
+@article{schoemake85,
+    author={Ken Schoemake},
+    title={Animating Rotation with Quaternion Curves},
+    journal={ACM SIGGRAPH Computer Graphics},
+    number={3},
+    pages={245--254},
+    volume={19},
+    year={1985},
+}
+
+@misc{glm:quat:angleAxis,
+    author={GLM Project Contributors},
+    title={glm::detail::quat::angleAxis},
+    url={https://github.com/g-truc/glm/blob/0.9.5/glm/gtc/quaternion.inl},
+    year={2014},
+}
+
