--- a/report/main.tex
+++ b/report/main.tex
@@ -24,7 +24,22 @@
 \maketitle
 
 \begin{abstract}
-Abstract goes here.
+Precious little research exists on the optimal way to represent interactive cameras with three degrees of freedom.
+These are cameras that can fly through a scene while rolling, pitching and yawing.
+In addition, they are controlled by a user through use of the mouse and keyboard.
+We investigate whether quaternions have the same numerical stability for this application area as for the integration case mentioned in \parencite{zupan11}.
+Along the way, we note several interesting phenomena we perceived during the course of our research.
+
+In order to test this numerical stability, we compare the stability of our quaternion camera implementation against the implementation that has the best numerical stability that we know of --- the ortho-normalized rotation matrix representation.
+This representation has some advantages.
+First, it is also gimball lock free, since there are no independent angles that can be rotated into one another's planes.
+The coordinate system as a whole rotates when the camera moves.
+Second, it is a very intuitive system for graphics programmers who are already very familiar with rotation matrices.
+Lastly, they are very stable numerically.
+
+We also offer empirical evidence of the performance increase that can be obtained by using quaternions instead of rotation matrices.
+Finally, we parameterize exactly how much this performance increase amounts to.
+
 \end{abstract}
 
 \category{K.8.1}{Application Packages}{Graphics}
@@ -71,6 +86,24 @@ Rotation matrices represent rotations as the components of a $3 \times 3$ matrix
 Rotation matrices are convenient because they work well with the well-established method of using matrices to represent affine transformations in computer graphics applications.
 Rotation matrices have to be kept ortho-normal, if they deviate from this property then they will alter the length of vectors, leading to distortions in the shape of the objects being rotated \parencite[4--5]{diebel06}.
 
+\subsection{Quaternions}
+
+Quaternion representations use a three component imaginary number vector along with a scalar component to represent rotations in three dimensional space.
+They are convenient because composing rotations represented as quaternions is a simple matter of multiplying them together \parencite[246]{schoemake85}.
+Other properties make quaternions more desirable than the other representations discussed so far.
+For example, they are purportedly faster to compute than rotation matrices \parencite[435]{taylor79}, they do not exhibit gimball lock \parencite[247]{schoemake85}.
+
+\section{Related Work}
+
+The earliest mention of quaternions for use in representing rotations seem to be \parencite{taylor79}, in which a novel method of robotic control is proposed.
+Somewhat later \parencite{schoemake85} proposed a rotation animation method that uses quaternions to interpolate between key frames.
+That work claims that quaternions are best for interpolation \parencite[247]{schoemake85}.
+Pletinckx in 1989 describes the quaternions and makes the important point that they are a less redundant representation of rotation than rotation matrices, since they only have four components and not nine \parencite[3]{pletinckx89}.
+The rest of that work motivates the use of quaternions in general graphics applications for such reason as the fact that they are gimball lock free \parencite[4]{pletinckx89} and can be used to solve animation, modelling and rendering problems \parencite[12]{pletinckx89}.
+Mukundan's work is a similar paper on the desirability of quaternions, pointing to applications in computer vision \parencite{mukundan02}.
+Zupan presents a recent paper that describes a method for integrating rotation values from angular velocity through the use of quaternions \parencite{zupan11}.
+In that paper, it was discovered that quaternion representations offer the least amount of numerical instability for this application area.
+
 \section{Experimental Setup}
 
 Our experiment consists of an implementation of both competing methods of interactive camera control.
@@ -105,32 +138,32 @@ Thirty tests of approximately one minute each were run, recording the victorious
 
 \section{Results} 
 
-Below, we have reproduced some graphs detailing the numerical stability of the various algorithms over time for several of our experimental test runs.
+We have reproduced some graphs detailing the numerical stability of the various algorithms over time for several of our experimental test runs in Figure \ref{fig:stability}.
 
-\begin{figure}
+\begin{figure}[htpb]
 \includegraphics[width=8.5cm]{plots/stability_plot_21.png}
-\caption{Test run 21 indicates a case where quaternions performed particularly poorly in terms of numerical stability.}
-\end{figure}
-\begin{figure}
-\includegraphics[width=8.5cm]{plots/stability_plot_21.png}
-\caption{Test run 24 is another good illustration of the orthonormalized rotation matrix's numerical stability.}
-\end{figure}
-\begin{figure}
 \includegraphics[width=8.5cm]{plots/stability_plot_13.png}
-\caption{Test run 13 illustrates a rare case where the orthonormalized rotation matrix performance was sub par.}
-\end{figure}
-\begin{figure}
 \includegraphics[width=8.5cm]{plots/stability_plot_28.png}
-\caption{Test run 28 illustrates the poor stability of rotation matrices without orthonormalisation.}
+\caption{Test run 21 (top) indicates a case where quaternions performed particularly poorly in terms of numerical stability.
+Test run 13 (middle) illustrates a rare case where the orthonormalized rotation matrix performance was sub par.
+Test run 28 (bottom) illustrates the poor stability of rotation matrices without orthonormalisation.}
+\label{fig:stability}
 \end{figure}
 
-We typically observed that the orthonormalized rotation matrices and quaternion implementations stayed around the $10^-12$ mark, however the rotation matrix implementation tends to explode past the $10^-10$ marks relatively quickly.
+In general, it was found that the orthonormalized rotation matrix performed the best in terms of numeric stability.
+This is discussed in subsection \ref{sec:stability}.
 
 An interesting result is that the quaternion algorithms are actually faster than the rotation matrix versions.
 This is in line with the passing comment made by Taylor \parencite[435]{taylor79}.
-This phenomenon is described in the subsection on performance, below.
+This phenomenon is described in subsection \ref{sec:performance}.
+
+\subsection{Numeric Stability}
+\label{sec:stability}
+
+
 
 \subsection{Relative Performance}
+\label{sec:performance}
 
 One might expect that quaternions are somewhat slower than rotation matrices, since they need to be converted to a new format, and because the math describing them is somewhat complex.
 This turns out not to be the case.
