--- a/report/main.bib
+++ b/report/main.bib
@@ -34,6 +34,22 @@
     year={1985},
 }
 
+@inproceedings{mukundan02,
+    author={R. Mukundan},
+    title={Quaternions: From Classical Mechanics to Computer Graphics, and Beyond},
+    booktitle={Proceedings of the 7th Asian Technology Conference in Mathematics, 2002},
+    year={2002},
+}
+
+@article{zupan11,
+    author={Eva Zupan and Miran Saje},
+    title={Integrating rotation from angular velocity},
+    journal={Advances in Engineering Software},
+    volume={43},
+    pages={723--733},
+    year={2011},
+}
+
 @misc{glm:quat:angleAxis,
     author={GLM Project Contributors},
     title={glm::detail::quat::angleAxis},
